--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
         <title>hello</title>
     </head>
     <body>
+        <h1>My website</h1>
         Hello web programming
     </body>
 </html>
